# Mandarina_app

./: .breakpoints  check_list.md  db.sqlite3  estructura.md  pyproject.toml
calendario/: .gitignore  apps.py  calendar_API.py  urls.py  views.py
calendario/templates/: calendario.html  index.html
home/: urls.py  views.py
home/static/homepage/css/: styles1.css
home/static/homepage/js/: scripts.js
home/static/pedidos/: styles.css
home/templates/: Demo_homepage.html  homepage.html  login.html
mysite/: settings.py  urls.py
pedidos/: forms.py  models.py  urls.py  views.py
pedidos/migrations/: 0001_initial.py  0002_pedido_nombre.py
pedidos/templates/: demo_pedidos.html  pedidos.html
recetario/: apps.py  forms.py  models.py  urls.py  views.py
recetario/migrations/: 0001_initial.py  0002_auto_20211003_0518.py
recetario/templates/: recetario.html
stock/: admin.py  forms.py  models.py  urls.py  views.py
stock/migrations/: 0001_initial.py  0002_auto_20211003_0351.py  0003_auto_20211003_0356.py  0004_auto_20211003_0500.py
stock/templates/: editar_ingrediente.html  editar_ingrediente1.html  stock.html
